Computer anxiety model changes

--- a/popup/loggerPopup.html
+++ b/popup/loggerPopup.html
@@ -13,6 +13,7 @@
 	<div id="count" class="button count"  style="display: none;"> Events recorded:</div>
 	<div id="report" class="button report disabled"> <img id="imageReport" class="image" src="../icons/report_32.png" alt="reportImg"></img> Report <i id="rightReport" class="arrow right"></i> </div>
 	<div id="download" class="button download disabled"> <img id="imageDownload" class="image" src="../icons/download_32.png" alt="downloadImg"></img> Dump raw data</div>
+	<div id="metrics" class="button download disabled"> <img id="imageMetrics" class="image" src="../icons/download_32.png" alt="downloadImg"></img> Download metrics</div>
 	<div id="events" class="button events"> <img id="imageEvents" class="image" src="../icons/manage_32.png" alt="eventsImg"></img> Events <i id="rightEvents" class="arrow right"></i> </div>
 	<div id="about" class="button about"> <img id="imageAbout" class="image" src="../icons/get-information_32.png" alt="aboutImg"></img> About</div>
 	<div class="margin"></div>
